[gd_scene load_steps=2 format=3 uid="uid://cea0k4ct7nebw"]

[ext_resource type="Script" path="res://control.gd" id="1_8qtm8"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qtm8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.823529, 0.447059, 0.0941176, 1)

[node name="raceEndTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.414931
anchor_top = 0.191358
anchor_right = 0.618924
anchor_bottom = 0.276235
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Race End!"
metadata/_edit_use_anchors_ = true

[node name="bestTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.345785
anchor_top = 0.439432
anchor_right = 0.667417
anchor_bottom = 0.504432
offset_left = -0.344025
offset_top = 0.247986
offset_right = 0.135986
offset_bottom = 0.127991
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Your Best Time: "
metadata/_edit_use_anchors_ = true

[node name="yourTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.373264
anchor_top = 0.33642
anchor_right = 0.633681
anchor_bottom = 0.401235
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Your Time: "
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.427
anchor_top = 0.569
anchor_right = 0.575
anchor_bottom = 0.633
offset_left = 0.0959778
offset_top = 0.287994
offset_right = -0.400024
offset_bottom = -0.184021
text = "Main Menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
